--- a/final.yml
+++ b/final.yml
@@ -7,6 +7,10 @@ Parameters:
     Description: An environment name
     Type: String
 
+  CidrIp:
+    Description: 'Please enter an IP range (CIDR notation) for this'
+    Type: String
+
 Resources:
   #instace profile contains the IAM Role name(s) that we want to associate to our auto scaling EC2 Servers
   LBSecGroup:
@@ -33,8 +37,8 @@ Resources:
         Fn::ImportValue: !Sub '${EnvironmentName}-VPCID'
       SecurityGroupIngress:
         - IpProtocol: tcp
-          FromPort: 8080
-          ToPort: 8080
+          FromPort: 80
+          ToPort: 80
           CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 22
